# Luthier

./: CMakeLists.txt  README.md
examples/InstrCount/: CMakeLists.txt  InstrCount.hip
examples/KernelArgumentIntrinsic/: CMakeLists.txt  KernelArgumentIntrinsic.hip
examples/KernelInstrument/: CMakeLists.txt  KernelInstrument.hip
examples/LDSBankConflict/: CMakeLists.txt  LDSBankConflict.hip
examples/LiftLaunchedKernels/: CMakeLists.txt  LiftLaunchedKernels.hip
examples/OpcodeHistogram/: CMakeLists.txt  OpcodeHistogram.hip
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/Common/: CMakeLists.txt  Debug.cpp  GenericLuthierError.cpp  LuthierError.cpp  ROCmLibraryError.cpp  Stacktrace.cpp
src/lib/HIP/: HipError.cpp
src/lib/HSA/: Agent.cpp  CMakeLists.txt  CodeObjectReader.cpp  Executable.cpp  ExecutableSymbol.cpp  HsaError.cpp  ISA.cpp  Instr.cpp  KernelDescriptor.cpp  LoadedCodeObjectCache.cpp  LoadedCodeObjectDeviceFunction.cpp  LoadedCodeObjectKernel.cpp  LoadedCodeObjectSymbol.cpp  LoadedCodeObjectVariable.cpp  Memory.cpp  MemoryPool.cpp  PacketMonitor.cpp  Region.cpp  SVM.cpp  VMEM.cpp  hsa.cpp
src/lib/HSATooling/: CMakeLists.txt  CodeGenerator.cpp  CodeLifter.cpp  Context.cpp  DeviceToolCodeFatBinaryLoader.cpp  DeviceToolCodeLoader.cpp  DeviceToolCodeLoaderBase.cpp  HSAToolCompileCheck.cpp  HsaMemoryAllocationAccessor.cpp  InstrumentationModule.cpp  InstrumentationTask.cpp  InstrumentedKernelLoaderAndLauncher.cpp  LoadedCodeObjectCache.cpp  PacketMonitor.cpp  TargetManager.cpp  ToolExecutableLoader.cpp  luthier.cpp
src/lib/IRTranslator/: CMakeLists.txt  DSSem.td  FLATSem.td  InstSISemantics.td  InstructionModel.cpp  MUBUFSem.td  PseudoOpcodeAndRegMapper.cpp  SIInstrSemantics.td  SISemOps.td  SMEMSem.td  SOP1Sem.td  SOP2Sem.td  SOPCSem.td  SOPKSem.td  SOPPSem.td  VINTRPSem.td  VOP3CSem.td  VOP3Sem.td  VOPCSem.td  VOPSem.td
src/lib/Intrinsic/: CMakeLists.txt  ImplicitArgPtr.cpp  IntrinsicProcessor.cpp  ReadReg.cpp  ReadSVA.cpp  SAtomicAdd.cpp  WriteExec.cpp  WriteReg.cpp
src/lib/LLVM/: Cloning.cpp  CodeGenHelpers.cpp  LLVMError.cpp  streams.cpp
src/lib/Linker/: CMakeLists.txt  Linker.cpp
src/lib/Object/: ObjectFileUtils.cpp
src/lib/PassPlugin/: LuthierPassPlugin.cpp
src/lib/Plugins/: CMakeLists.txt
src/lib/Plugins/EmbedIModulePlugin/: EmbedInstrumentationModuleBitcodePass.cpp
src/lib/Plugins/LoadHIPFATBinaryPlugin/: CMakeLists.txt  LoadHIPFATBinaryInfoPass.cpp  LoadHIPFATBinaryInfoPass.hpp  LoadHIPFATBinaryInfoPlugin.cpp
src/lib/Plugins/OptPlugin/: CMakeLists.txt  OptPlugin.cpp
src/lib/Plugins/ToolCXXCompilationPlugin/: CMakeLists.txt  ToolCXXCompilationPlugin.cpp
src/lib/Plugins/ToolCodeGenPlugin/: CMakeLists.txt  (+1 more)
src/lib/Rocprofiler/: RocprofilerError.cpp
src/lib/TestFile/: CMakeLists.txt  LuthierFile.cpp
src/lib/ToolCXXCompilation/: Attributes.cpp  CMakeLists.txt  Consumers.cpp  Mangling.cpp
src/lib/ToolCodeGen/: AMDGPUMockLoaderPrinter.cpp  CMakeLists.txt  CodeDiscoveryPass.cpp  CodeObjectManagerAnalysis.cpp  DebugInfoPass.cpp  ForwardISAStateToCalleesPass.cpp  FunctionAnnotations.cpp  IPPredicatedCFG.cpp  IPPredicatedLiveness.cpp  IPPredicatedLivenessIModulePass.cpp  IPPredicatedLoopTraversal.cpp  IPReachingRefAnalysis.cpp  IPRegScavenger.cpp  InitialEntryPointAnalysis.cpp  InitialExecutionPointAnalysis.cpp  InjectedPayloadAccessedRegsAnalysis.cpp  InjectedPayloadAndInstPointAnalysis.cpp  InjectedPayloadPEIPass.cpp  InjectedPayloadPreserveLiveRegsPass.cpp  InstructionTracesAnalysis.cpp  InstrumentationPMDriver.cpp  IntrinsicMIRLoweringPass.cpp  IntrinsicProcessorRegistry.cpp  IntrinsicProcessorsAnalysis.cpp  LuthierBranchRelaxation.cpp  LuthierCallGraph.cpp  LuthierRegScavenger.cpp  MIInlineAsmEmitter.cpp  MIRConvenience.cpp  MIRToIRTranslator.cpp  MMISlotIndexesAnalysis.cpp  MemoryAllocationAccessor.cpp  Metadata.cpp  MetadataParserAnalysis.cpp  MockAMDGPULoader.cpp  MockLoadAMDGPUCodeObjects.cpp  MockLoaderMemoryAccessor.cpp  NewPMAsmPrinter.cpp  PatchLiftedRepresentationPass.cpp  PhysRegsNotInLiveInsAnalysis.cpp  (+17 more)
src/lib/ToolCodeGenTesting/: AMDGPUMockLoaderPrinter.cpp  CMakeLists.txt  CodeObjectManagerAnalysis.cpp  LuthierFile.cpp  MockAMDGPULoader.cpp  MockLoadAMDGPUCodeObjects.cpp  MockLoaderMemoryAccessor.cpp
src/lib/ToolIRCompilation/: CMakeLists.txt  CreateAndEmbedIModulePass.cpp  ExternalizeGlobalsPass.cpp  FinalizeHooksPass.cpp  FinalizeIntrinsicsPass.cpp  LoadHIPFATBinaryInfoPass.cpp  LuthierFunctionIndirectionPass.cpp  MarkAnnotationsPass.cpp  StripDeviceFunctionBodiesPass.cpp  StripKernelsPass.cpp  SubstituteAMDGCNIntrinsicsPass.cpp  SubtargetMarkerPass.cpp
src/lib/Tooling/: CMakeLists.txt
src/lib/ToolingCommon/: AMDGPUMockLoaderPrinter.cpp  AnnotatedMachineInstr.cpp  CMakeLists.txt  CodeDiscoveryPass.cpp  FunctionAnnotations.cpp  IModuleIRGeneratorPass.cpp  IPLoopTraversal.cpp  IPPredicatedCFG.cpp  IPPredicatedLiveness.cpp  IPPredicatedLoopTraversal.cpp  IPReachingRefAnalysis.cpp  IPRegScavenger.cpp  IPVectorCFG.cpp  IPVectorRegLiveness.cpp  IndirectBranchResolverAnalysis.cpp  InitialExecutionPointAnalysis.cpp  InjectedPayloadAndInstPointAnalysis.cpp  InjectedPayloadPEIPass.cpp  InstructionModel.cpp  InstructionTracesAnalysis.cpp  InstrumentationPMDriver.cpp  IntrinsicMIRLoweringPass.cpp  IntrinsicProcessorRegistry.cpp  LRCallGraph.cpp  LinearMachineBasicBlock.cpp  LoadHIPFATBinaryInfoPass.cpp  LuthierCallGraph.cpp  LuthierFile.cpp  MIInlineAsmEmitter.cpp  MIRToIRTranslator.cpp  MachineFunctionEntryPoint.cpp  MachineInstrAnnotations.cpp  Metadata.cpp  MockAMDGPULoader.cpp  MockLoadAMDGPUCodeObjects.cpp  MockLoaderMemoryAccessor.cpp  NewPMAsmPrinter.cpp  PatchLiftedRepresentationPass.cpp  PhysRegsNotInLiveInsAnalysis.cpp  PhysicalRegAccessVirtualizationPass.cpp  (+8 more)
src/test/: CMakeLists.txt
src/test/imodule/: CMakeLists.txt
src/test/lib/: CMakeLists.txt
src/test/lit/: CMakeLists.txt  accuracy-hip-amdgcn-amd-amdhsa-gfx908.s  delegate-hip-loading-test.ll  lit.cfg.py  lit.site.cfg.py.in  no-hip-info.ll  vec-add-gfx942-di-mir.s  vec-add-global-var-gfx942-di-mir.s
src/test/unit/: CMakeLists.txt
(+488 files in other folders)
