add_subdirectory(Plugins)
add_subdirectory(AMDGPU)
add_subdirectory(LLVM)
add_subdirectory(Linker)
add_subdirectory(Rocprofiler)
add_subdirectory(Object)
add_subdirectory(Common)
add_subdirectory(HSA)
add_subdirectory(HIP)
#add_subdirectory(Intrinsic)
add_subdirectory(ToolingCommon)
add_subdirectory(HSATooling)
add_subdirectory(Tooling)