add_subdirectory(AMDGPU)
add_subdirectory(LLVM)
add_subdirectory(Linker)
add_subdirectory(Rocprofiler)
add_subdirectory(Object)
add_subdirectory(Common)
add_subdirectory(HSA)
add_subdirectory(HIP)
add_subdirectory(Intrinsic)
add_subdirectory(ToolCodeGen)
add_subdirectory(ToolCodeGenTesting)
add_subdirectory(HSATooling)
add_subdirectory(Tooling)
add_subdirectory(ToolIRCompilation)
add_subdirectory(ToolCXXCompilation)
add_subdirectory(PassPlugin)
add_subdirectory(Plugins)